fix btn alignment in "post on which topic?" dialog

--- a/app/assets/stylesheets/common/base/modal.scss
+++ b/app/assets/stylesheets/common/base/modal.scss
@@ -161,7 +161,7 @@
       width: 310px;
       margin-bottom: 10px;
       display: block;
-      margin-left: 0;
+      margin-left: 0 !important; // override needed
       .topic-title {
         font-size: 0.929em;
         font-weight: normal;
